[gd_scene load_steps=2 format=3 uid="uid://d5eukgxdca4k"]

[ext_resource type="Script" path="res://TweenTut.gd" id="1_s0r8r"]

[node name="TweenTut" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_s0r8r")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 255.0
offset_top = 65.0
offset_right = 382.0
offset_bottom = 193.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Move" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Move"

[node name="MoveBounce" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Move Bounce"

[node name="Scale" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Scale"

[node name="Rotate" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Rotate"

[node name="MoveScale" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Move Scale"

[node name="Red" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Red"

[node name="Transparent" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Transparent"

[node name="Blue" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Blue"

[node name="Green" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Green"

[connection signal="pressed" from="VBoxContainer/Move" to="." method="_on_move_pressed"]
[connection signal="pressed" from="VBoxContainer/MoveBounce" to="." method="_on_move_bounce_pressed"]
[connection signal="pressed" from="VBoxContainer/Scale" to="." method="_on_scale_pressed"]
[connection signal="pressed" from="VBoxContainer/Rotate" to="." method="_on_rotate_pressed"]
[connection signal="pressed" from="VBoxContainer/MoveScale" to="." method="_on_move_scale_pressed"]
[connection signal="pressed" from="VBoxContainer/Red" to="." method="_on_red_pressed"]
[connection signal="pressed" from="VBoxContainer/Transparent" to="." method="_on_transparent_pressed"]
[connection signal="pressed" from="VBoxContainer/Blue" to="." method="_on_blue_pressed"]
[connection signal="pressed" from="VBoxContainer/Green" to="." method="_on_green_pressed"]
